data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_60.wast
;; 1. **Test with Empty `br_table` Targets**:    - A `block` containing a `br_table` instruction with no label targets.    - This tests if `br_table` correctly handles the case of an empty target list and whether it defaults to the correct behavior (branch to the following instruction).    - Edge Case: Wizard_engine's `resetInit` may fail to handle edge cases where there are no targets, potentially leading to undefined state.

(assert_invalid
  (module (func $test (result i32)
    (block (result i32)
      (br_table 0 (i32.const 1))
    )
  ))
  "type mismatch"
)